--- a/GraphicsProcessingMulti-core/pom.xml
+++ b/GraphicsProcessingMulti-core/pom.xml
@@ -6,4 +6,23 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>GraphicsProcessingMulti-core</artifactId>
+	<build>
+
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+
+			</plugin>
+		</plugins>
+	</build>
+  
+  
 </project>
