--- a/GraphicsProcessingMulti-preProcessing/pom.xml
+++ b/GraphicsProcessingMulti-preProcessing/pom.xml
@@ -14,7 +14,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+	<!-- 	<version>3.1</version> -->	
 
 				<configuration>
 					<source>1.7</source>
@@ -24,4 +24,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.3</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
