--- a/GraphicsProcessingMulti-preProcessing/pom.xml
+++ b/GraphicsProcessingMulti-preProcessing/pom.xml
@@ -1,6 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<repositories>
+		<repository>
+			<id>springsource-repo</id>
+			<name>SpringSource Repository</name>
+			<url>http://repo.springsource.org/release</url>
+		</repository>
+	</repositories>
 	<parent>
 		<groupId>GraphicsProcessingMulti</groupId>
 		<artifactId>GraphicsProcessingMulti</artifactId>
@@ -14,7 +21,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-	<!-- 	<version>3.1</version> -->	
+				<!-- <version>3.1</version> -->
 
 				<configuration>
 					<source>1.7</source>
@@ -30,6 +37,11 @@
 			<artifactId>junit</artifactId>
 			<version>4.3</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>3.2.3.RELEASE</version>
 		</dependency>
 	</dependencies>
 </project>
